commit code to Group 1 - complete